[project]
name = "blog-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.139.0",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.51",
]

[tool.fastapi]
entrypoint = "app.main:app"
